Fix ad visibility

--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -54,7 +54,7 @@
     .container {
         aside {
             display: none;
-            .adsbygoogle {
+            .ADSENSE {
                 display: none !important;
             }
         }
