--- a/src/sass/pages/_post.scss
+++ b/src/sass/pages/_post.scss
@@ -45,7 +45,7 @@
 
     @media (min-width: 1920px) {
         .content {
-            .adsbygoogle {
+            .ADSENSE {
                 display: none !important;
             }
         }
